# fastapi-boilerplate

./: .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  openapi.json  pyproject.toml
.github/workflows/: code_quality.yml  security.yml  setup_environment.yml
.run/: fastapi-boilerplate.run.xml
app/: __init__.py
app/api/: __init__.py  deps.py  oauth2_validation.py  redis_deps.py
app/api/api_v1/: __init__.py  api.py
app/api/api_v1/router/: __init__.py  auth.py  user.py
app/config/: __init__.py  config.py  init_settings.py  settings.py
app/config/db/: __init__.py  auth_settings.py  sql_database_settings.py
app/core/: __init__.py  decorators.py  lifecycle.py  logging_config.py
app/core/security/: __init__.py  jwt.py  password.py
app/crud/: __init__.py  address.py  filter.py  locality.py  region.py  specification.py  user.py
app/db/: __init__.py  auth.py  base_class.py  init_db.py  session.py
app/exceptions/: __init__.py  exceptions.py
app/middlewares/: __init__.py  blacklist_token.py  ip_blacklist.py  rate_limiter.py  security_headers.py
app/models/: __init__.py
app/models/sql/: __init__.py  address.py  locality.py  region.py  user.py
app/models/unstructured/: __init__.py  token.py
app/schemas/: __init__.py  schemas.py
app/schemas/infrastructure/: __init__.py  common_attributes.py  gender.py  http_method.py  scope.py  user.py  user_base.py
app/services/: __init__.py
app/services/infrastructure/: __init__.py  auth.py  cached_user.py  encryption.py  ip_blacklist.py  rate_limiter.py  services.py  token.py  user.py
app/tasks/: __init__.py
app/tasks/email_tasks/: __init__.py  email_tasks.py  message.py  notificaction.py  template.py
app/utils/: __init__.py  utils.py
app/utils/files_utils/: __init__.py  json_utils.py  openapi_utils.py
app/utils/security/: __init__.py  jwt.py  password.py
assets/css/: coverage.css  styles.css
templates/: delete_account.html  new_account.html  password_changed_confirmation.html  reset_password.html  welcome.html
tests/: __init__.py  test_main.py
tests/integration/: __init__.py
tests/system/: __init__.py
tests/unit/: __init__.py
